--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
+    "wacc_32": "file:wasm",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
