--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-terminal": "^1.2.8",
     "typescript": "^4.8.3",
     "wacc_32": "file:wasm",
     "web-vitals": "^2.1.4"
