--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "ace-builds": "^1.11.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
